# Stash

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  go.mod  index.html
.github/workflows/: ci.yml  release.yml
cmd/stash/: main.go  theme.go
internal/hotkey/: hotkey_darwin.go  hotkey_unsupported.go
internal/imageclipboard/: clipboard_darwin.go  clipboard_darwin.m  clipboard_unsupported.go
internal/keybind/: keybind.go
internal/store/: store.go  store_test.go
scripts/: install-macos.sh  package-macos.sh
src/: DataStore.cpp  HotkeyManager.cpp  HotkeyManager.h  MainWindow.cpp  MainWindow.h  main.cpp
src/widgets/: ClipItemWidget.cpp  ClipItemWidget.h  KeybindPill.cpp
tests/: QuickNoteTests.cpp  StashTests.cpp
